cabal-version: 3.0

name:                   adawallet
version:                0.0
description:            The Cardano command-line interface.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Werror
--                        -Wall
--                        -Wcompat
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wpartial-fields
--                        -Wredundant-constraints
--                        -Wunused-packages
--                        -Wno-orphans
--                        -Wno-deprecations

common maybe-unix
  if !os(windows)
     build-depends:    unix

library
  import:               base, project-config

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Adawallet

  build-depends:        aeson             >= 1.5.6.0
                      , MissingH
                      , bytestring
                      , cardano-addresses
                      , cardano-api ^>= 8.45.2
                      , cardano-cli ^>= 8.23
                      , cardano-prelude
                      , containers
                      , either
                      , formatting
                      , http-api-data
                      , http-client-tls
                      , http-media
                      , iproute
                      , network
                      , ouroboros-consensus
                      , ouroboros-network-protocols
                      , parsec
                      , servant-client
                      , servant-server
                      , split
                      , stm
                      , text
                      , time
                      , transformers-except
                      , warp

executable adawallet
  import:               base, project-config
  main-is:              adawallet.hs
  build-depends:        adawallet
  ghc-options:          -threaded
