cabal-version: 3.0

name:                   adawallet
version:                0.0
description:            The Cardano command-line wallet.
author:                 Hard Fork Company
maintainer:             sam@hardfork.company
license:                Apache-2.0
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Werror
--                        -Wall
--                        -Wcompat
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wpartial-fields
--                        -Wredundant-constraints
--                        -Wunused-packages
--                        -Wno-orphans
--                        -Wno-deprecations

common maybe-unix
  if !os(windows)
     build-depends:    unix

library
  import:               base, project-config

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      AdaWallet
                      , Transaction

  build-depends:        aeson             >= 1.5.6.0
                      , MissingH
                      , blockfrost-api
                      , blockfrost-client
                      , bytestring
                      , cardano-addresses
                      , cardano-api ^>= 8.46
                      , cardano-prelude
                      , containers
                      , either
                      , formatting
                      , ouroboros-consensus
                      , ouroboros-network-protocols
                      , parsec
                      , persistent-sqlite
                      , pretty-simple
                      , safe-money
                      , servant-client
                      , split
                      , stm
                      , text
                      , time
                      , transformers-except
                      , directory
                      , optparse-applicative

executable adawallet
  import:               base, project-config
  main-is:              Main.hs
  build-depends:        adawallet
  ghc-options:          -threaded
